IDEA-279613 'Format code' option on the Actions on Save page could give a choice of file types to process.
GitOrigin-RevId: a0b6e94cb659d8338934d8ebd0646feb147cd31a